<resources>
    <string name="app_name">Attending VIA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">VIA ID Student:</string>
    <string name="professor_nav_header_title">VIA ID Professor:</string>
    <string name="sm_nav_header_title">VIA ID Schedule Manager:</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_0">Scan QR code</string>
    <string name="menu_1">Latest attendance</string>
    <string name="menu_2">History</string>
    <string name="menu_3">Settings</string>
    <string name="menu_4">Log out</string>
    <string name="menu_5">Classroom attendance</string>
    <string name="menu_6">Check current attendance</string>
    
    <string name="period">Period:</string>
    <string name="from">From...</string>
    <string name="lectureID">Lecture ID</string>
    <string name="roomID">Room ID</string>
    <string name="to">To...</string>
    <string name="showStatistics">Show statistics</string>
    <string name="registryLecture">Registry to lecture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>