<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_classes"
            android:title="@string/menu_0" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_1" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_2" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_3"/>
    </group>
</menu>