<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_scanqr">

    <fragment
        android:id="@+id/nav_scanqr"
        android:name="com.example.myapplication.ui.scanqr.ScanqrFragment"
        android:label="@string/menu_0"
        tools:layout="@layout/fragment_scanqr" />
    <fragment
        android:id="@+id/nav_latestattendance"
        android:name="com.example.myapplication.ui.latestattendance.LatestAttendanceFragment"
        android:label="@string/menu_1"
        tools:layout="@layout/fragment_latestattendance" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.myapplication.ui.history.HistoryFragment"
        android:label="@string/menu_2"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.myapplication.ui.settings.SettingsFragment"
        android:label="@string/menu_3"
        tools:layout="@layout/fragment_settings" />
</navigation>