<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/student_nav_scanqr">

    <fragment
        android:id="@+id/student_nav_scanqr"
        android:name="com.example.myapplication.student.ui.scanqr.ScanqrFragment"
        android:label="@string/registryLecture"
        tools:layout="@layout/student_fragment_scanqr" />
    <fragment
        android:id="@+id/student_nav_latestattendance"
        android:name="com.example.myapplication.student.ui.latestattendance.LatestAttendanceFragment"
        android:label="@string/menu_1"
        tools:layout="@layout/student_fragment_latestattendance" />
    <fragment
        android:id="@+id/student_nav_history"
        android:name="com.example.myapplication.student.ui.history.HistoryFragment"
        android:label="@string/menu_2"
        tools:layout="@layout/student_fragment_history" >
        <action
            android:id="@+id/action_nav_history_to_history_course"
            app:destination="@id/student_history_course" />
    </fragment>
    <fragment
        android:id="@+id/student_nav_settings"
        android:name="com.example.myapplication.student.ui.settings.SettingsFragment"
        android:label="@string/menu_3"
        tools:layout="@layout/student_fragment_settings" />
    <fragment
        android:id="@+id/student_history_course"
        android:name="com.example.myapplication.student.ui.historycourses.HistoryCourses"
        android:label="History latest attendances"
        tools:layout="@layout/student_fragment_history_course" />
</navigation>