<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".student.ui.history.HistoryFragment">

    <TextView
        android:id="@+id/student_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:text="@string/lectureID"
        android:textSize="@dimen/title"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <Spinner
        android:id="@+id/student_spinnercourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_course"
        app:layout_constraintVertical_bias="0.030" />

    <TextView
        android:text="@string/period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/subtitle"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintBottom_toTopOf="@+id/student_date_from"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/student_spinnercourse" />

    <EditText
        android:hint="@string/from"
        android:id="@+id/student_date_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="-200dp"
        android:nextFocusDown="@+id/student_date_until"
        android:focusable="true"
        android:imeOptions="actionNext"
        />

    <EditText
        android:hint="@string/to"
        android:id="@+id/student_date_until"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/student_date_from"
        android:layout_marginTop="-250dp"
        android:nextFocusDown="@+id/student_search_button"
        android:focusable="true"
        android:imeOptions="actionNext"/>

    <Button
        android:id="@+id/student_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="150dp"
        android:text="@string/showStatistics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true"
        android:imeOptions="actionNext"/>

</androidx.constraintlayout.widget.ConstraintLayout>